cmake_minimum_required(VERSION 2.8)

if(NOT DEFINED CMAKE_TOOLCHAIN_FILE)
  if(DEFINED ENV{VITASDK})
    set(CMAKE_TOOLCHAIN_FILE "$ENV{VITASDK}/share/vita.toolchain.cmake" CACHE PATH "toolchain file")
  else()
    message(FATAL_ERROR "Please define VITASDK to point to your SDK path!")
  endif()
endif()

project(sample)
add_subdirectory(audio)
add_subdirectory(camera)
add_subdirectory(ctrl)
add_subdirectory(debug_print)
add_subdirectory(hello_cpp_world)
add_subdirectory(hello_world)
add_subdirectory(ime)
add_subdirectory(motion)
add_subdirectory(net_http)
add_subdirectory(power)
add_subdirectory(pretty_livearea)
add_subdirectory(rtc)
add_subdirectory(touch)
add_subdirectory(microphone)
