cmake_minimum_required(VERSION 3.0)

if(NOT DEFINED CMAKE_TOOLCHAIN_FILE)
  if(DEFINED ENV{VITASDK})
    set(CMAKE_TOOLCHAIN_FILE "$ENV{VITASDK}/share/vita.toolchain.cmake" CACHE PATH "toolchain file")
  else()
    message(FATAL_ERROR "Please define VITASDK to point to your SDK path!")
  endif()
endif()

project(sample)
add_subdirectory(basic_program)
add_subdirectory(audio)
add_subdirectory(camera)
add_subdirectory(ctrl)
add_subdirectory(debug_print)
add_subdirectory(debugscreen)
add_subdirectory(hello_cpp_world)
add_subdirectory(hello_world)
add_subdirectory(ime)
add_subdirectory(json)
add_subdirectory(kernel_sample)
add_subdirectory(microphone)
add_subdirectory(motion)
add_subdirectory(net_http)
add_subdirectory(net_http_bsd)
add_subdirectory(net_https)
add_subdirectory(net_libcurl)
add_subdirectory(power)
add_subdirectory(pretty_livearea)
add_subdirectory(prx_simple)
add_subdirectory(prx_loader)
add_subdirectory(rtc)
add_subdirectory(sdl2/redrectangle)
add_subdirectory(socket_ping)
add_subdirectory(soloud)
add_subdirectory(touch)
